--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,33 +1,49 @@
+// pipeline {
+//     agent any
+//     environment {
+//         MAVEN_HOME = "/opt/apache-maven-3.9.0"
+//         PATH = "$MAVEN_HOME/bin:$PATH"
+//     }
+//     stages {
+//         stage('Build') {
+//             steps {
+//                 sh 'mvn -B -DskipTests clean package'
+//             }
+//         }
+//         stage('Test') {
+//             steps {
+//                 sh 'mvn test'
+//             }
+//             post {
+//                 always {
+//                     junit 'target/surefire-reports/*.xml'
+//                 }
+//             }
+//         }
+//         stage('Deliver') {
+//             steps {
+//                 sh './jenkins/scripts/deliver.sh'
+//             }
+//         }
+//         stage('Complete') {
+//             steps {
+//                 echo 'Job complete'
+//             }
+//         }
+//     }
+// }
 pipeline {
     agent any
-    environment {
-        MAVEN_HOME = "/opt/apache-maven-3.9.0"
-        PATH = "$MAVEN_HOME/bin:$PATH"
+
+    parameters {
+        booleanParam(defaultValue: false, description: "Enable service?", 
+        name: "myBoolean")
     }
+
     stages {
-        stage('Build') {
+        stage("Demo") {
             steps {
-                sh 'mvn -B -DskipTests clean package'
-            }
-        }
-        stage('Test') {
-            steps {
-                sh 'mvn test'
-            }
-            post {
-                always {
-                    junit 'target/surefire-reports/*.xml'
-                }
-            }
-        }
-        stage('Deliver') {
-            steps {
-                sh './jenkins/scripts/deliver.sh'
-            }
-        }
-        stage('Complete') {
-            steps {
-                echo 'Job complete'
+                echo "booleanParam is set to: ${params.myBoolean}"
             }
         }
     }
