added a string param to Jenkinsfile

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -38,12 +38,16 @@ pipeline {
     parameters {
         booleanParam(defaultValue: false, description: "Enable service?", 
         name: "myBoolean")
+        string(defaultValue: "TEST", description: "which env to deploy in?", 
+        name: "deployEnv")
     }
 
     stages {
         stage("Demo") {
             steps {
                 echo "booleanParam is set to: ${params.myBoolean}"
+                echo "string is set to: ${params.deployEnv}"
+
             }
         }
     }
